# Hunted

./: README.md  local.properties
.google/: packaging.yaml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.c  main.h
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
